# sample-sop-mcp

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  SECURITY.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: mcp-reference.md
scripts/: generate_docs.py
skills/sop-mcp-configuration/: SKILL.md
skills/sop-mcp-usage/: SKILL.md
src/sop_lint/: __init__.py  cli.py  engine.py
src/sop_lint/resources/: sop-lint.toml
src/sop_mcp/: __init__.py  server.py
src/sop_mcp/resources/: __init__.py
src/sop_mcp/resources/code_review_process/: code_review_process.sop.md
src/sop_mcp/resources/employee_onboarding_setup/: employee_onboarding_setup.sop.md
src/sop_mcp/resources/sop_creation_guide/: sop_creation_guide.sop.md  sop_template.md
src/sop_mcp/resources/user_onboarding_process/: user_onboarding_process.sop.md
src/sop_mcp/tools/: __init__.py  lint_sop.py  publish_sop.py  run_sop.py  submit_sop_feedback.py
src/sop_mcp/utils/: __init__.py  resource_registration.py  sop_parser.py  storage.py
src/sop_mcp/utils/stdiomcp/: __init__.py  server.py  tools.py
tests/: conftest.py  test_cli_lint.py  test_lint.py  test_mcp_lint_sop.py  test_mcp_protocol.py  test_mcp_publish_sop.py  test_mcp_resources.py  test_mcp_run_sop.py  test_mcp_submit_feedback.py  test_parser.py  test_storage.py
